# luajit-nix-template

./: .gitignore  CMakeLists.txt  README.md  flake.nix
src/: CMakeLists.txt
